kubernetes/apps/default/bedroompi/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bedroompi-api
  namespace: default
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: bedroompi-api
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.10.24
    ports:
      - port: 9000
        protocol: TCP
