kubernetes/apps/default/bedroompi/api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bedroompi-api
  namespace: default
spec:
  ingressClassName: internal
  rules:
    - host: &host bedroompi-api.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bedroompi-api
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
